# STOS

./: Bartosz.Mielewczyk.193313.5.kol6.cpp  CMakeLists.txt  L3_F1_S1.cpp  L3_F1_S2.cpp  L3_F2_Z1.cpp  L3_F2_Z2.cpp  L5_F1_S1.cpp  L5_F1_S2.cpp  L7_F0_P4.cpp  L7_F1_Z1.cpp  L7_F1_Z2.cpp  L7_F1_Z3.cpp  L7_F1_Z4.cpp  PoleTrojkataw3D.cpp  bartosz.mielewczyk.s193313.5.cpp  caig.cpp  ekonomicznosc.cpp  funkcjaPoP.cpp  kalkulator.cpp  max4digits.cpp  nierownoscTrojkata.cpp  odl3d.cpp  przecinanieOkr.cpp  sort3liczb.cpp  wzHerona.cpp
